@@ -104,38 +104,28 @@
       </nav>
 
       <!-- NAVBAR FOR TABLET-->
-      <div class="collapse" id="hamburgerTablet" data-bs-theme="light">
+      <div class="collapse collapse-tablet" id="hamburgerTablet" data-bs-theme="light">
         <div class="bg-light p-4">
           <h4><a class="nav-link-mobile" href="home.html">Home</a></h4>
           <h4><a class="nav-link-mobile" href="car-configurator.html">Configuratore</a></h4>
           <h4><a class="nav-link-mobile" href="shopping-cart.html">Vai al carrello</a></h4>
           <h4><a class="nav-link-mobile" href="wish-list.html">Lista dei desideri</a></h4>
           <h4><a class="nav-link-mobile" href="purchase-list.html">Lista degli acquisti</a></h4>
+
+          <br>
+          <h4><a class="nav-link-mobile" href="profile.html">Profilo personale</a></h4>
+          <h4><a class="nav-link-mobile" href="login.html">Accedi/Login</a></h4>
+          <h4><a class="nav-link-mobile" href="sign-up.html">Registrati</a></h4>
         </div>
       </div>
       <nav class="navbar navbar-light bg-light fixed-top d-none d-sm-block d-md-none">
-        <div class="container-fluid d-flex justify-content-between align-items-center">
+        <div class="container-fluid d-flex justify-content-between align-items-center flex-nowrap">
           <div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburgerTablet" aria-controls="hamburgerTablet" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
           </div>
-          <!-- profile links -->
-          <div class="navbar-collapse nav-item-right-desktop d-flex align-items-center" id="profile-menu-dropdown_tablet">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <button class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                  <img src="../../img/static/profile.svg" class="nav-icon-desktop" alt="Profile">
-                </button>
-                <ul class="dropdown-menu dropdown-menu-light">
-                  <li><a class="dropdown-item nav-link-desktop-sub" href="profile.html">Vedi Profilo</a></li>
-                  <li><a class="dropdown-item nav-link-desktop-sub" href="login.html">Accedi / Logout</a></li>
-                  <li><a class="dropdown-item nav-link-desktop-sub" href="sign-up.html">Registrati</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-          <div class="nav-item-right-desktop">
+          <div class="d-flex align-items-center flex-shrink-0">
             <img src="../../img/static/light.svg" class="nav-icon-desktop">
             <!-- Dark/Light switch -->
             <label class="switch mb-0">
@@ -153,8 +143,6 @@
       </nav>
 
 
-
-    <br><br>
       <!-- CAROUSEL WITH THE CARS -->
       <div class="position-relative">
         <h1 class="carousel-title">Concessionario Laghi</h1>
@@ -179,7 +167,6 @@
         </div>
       </div>
 
-      <br><br>
       <!-- MOST SOLD CARS  -->
       <div class="home-section">
         <h2>Le più vendute</h2>
@@ -209,7 +196,6 @@
         </div>
       </div>
 
-      <br><br>
       <!-- CARD THAT THE USER COULD LIKE  -->
       <div class="home-section">
         <h2>Potrebbero piacerti...</h2>
@@ -239,7 +225,7 @@
         </div>
       </div>
 
-      <br><br>
+
       <!-- CARD BRANDS  -->
       <div class="home-section">
         <h2>I nostri marchi</h2>
@@ -254,19 +240,120 @@
         </div>
       </div>
 
+      <!-- ACCESS TO THE OTHER PAGES -->
+      <div class="container home-section normal-text">
+        <div class="row">
+          <!-- shopping cart link -->
+          <div class="col-md-6">
+            <div class="card">
+              <h5 class="card-header card-sitelink-header">Carrello</h5>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-4 d-flex justify-content-center align-items-center">
+                    <img src="../../img/static/shopping-cart.svg" class="pagelink-card">
+                  </div>
+                  <div class="col-8">
+                    <p class="card-text">Rivedi gli articoli che hai aggiunto e decidi quali scartare e quali acquistare...</p>
+                    <a href="shopping-cart.html" class="btn btn-secondary">Visita</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- car configurator link -->
+          <div class="col-md-6">
+            <div class="card">
+              <h5 class="card-header card-sitelink-header">Configuratore auto</h5>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-4 d-flex justify-content-center align-items-center">
+                    <img src="../../img/static/car.svg" class="pagelink-card">
+                  </div>
+                  <div class="col-8">
+                    <p class="card-text">Ricerca l'auto più adatta ai tuoi gusti e alle tue esigenze...</p>
+                    <a href="car-configurator.html" class="btn btn-secondary">Visita</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-3">
+          <!-- wish-list link -->
+          <div class="col-md-6">
+            <div class="card">
+              <h5 class="card-header card-sitelink-header">Lista dei desideri</h5>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-4 d-flex justify-content-center align-items-center">
+                    <img src="../../img/static/gift.svg" class="pagelink-card">
+                  </div>
+                  <div class="col-8">
+                    <p class="card-text">Scegli le auto da tenere d'occhio. Il tuo sogno potrebbe trasformarsi in realtà...</p>
+                    <a href="wish-list.html" class="btn btn-secondary">Visita</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- purchase-list link -->
+          <div class="col-md-6">
+            <div class="card">
+              <h5 class="card-header card-sitelink-header">Lista acquisti</h5>
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-4 d-flex justify-content-center align-items-center">
+                    <img src="../../img/static/dollar.svg" class="pagelink-card">
+                  </div>
+                  <div class="col-8">
+                    <p class="card-text">Controlla gli ultimi bolidi che hai acquistato!</p>
+                    <a href="purchase-list.html" class="btn btn-secondary">Visita</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Footer -->
       <footer>
-        <row class="normal-text">
-          <div col="md-6 lg-3">
-            <h5>Autori</h5>
-            <ul class="unordered-list_no-pointed">
-              <li><a href="https://github.com/danielechiarion" target="_blank">Daniele Chiarion</a></li>
-              <li><a href="https://github.com/crepaldimattia" target="_blank">Mattia Crepaldi</a></li>
-              <li><a href="https://github.com/DavideFocalors79" target="_blank">Davide Laghi</a></li>
-            </ul>
+        <div class="container">
+          <div class="row normal-text">
+            <div class="col-md-6 col-lg-3 footer-column">
+              <h5>Autori</h5>
+              <ul class="unordered-list_no-pointed">
+                <li><a href="https://github.com/danielechiarion" target="_blank" class="footer-link">Daniele Chiarion</a></li>
+                <li><a href="https://github.com/crepaldimattia" target="_blank" class="footer-link">Mattia Crepaldi</a></li>
+                <li><a href="https://github.com/DavideFocalors79" target="_blank" class="footer-link">Davide Laghi</a></li>
+              </ul>
+            </div>
+            <div class="col-md-6 col-lg-6 footer-column">
+              <h5>La scuola</h5>
+              <div class="row">
+                <div class="col-3">
+                  <img src="https://iisviolamarchesini.edu.it/wp-content/uploads/2023/10/logo.svg" height="80" width="80">
+                </div>
+                <div class="col-9">
+                  <p><a href="https://iisviolamarchesini.edu.it" target="_blank" class="footer-link">IIS Viola Marchesini Rovigo</a></p>
+                  <p>Via De Gasperi 21 - 45100 Rovigo (RO)</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-3 footer-column">
+              <h5>I nostri servizi</h5>
+              <li><a href="car-configurator.html" class="footer-link">Configuratore</a></li>
+              <li><a href="purchase-list.html" class="footer-link">Lista acquisti</a></li>
+              <li><a href="shopping-cart.html" class="footer-link">Carrello</a></li>
+              <li><a href="wish-list.html" class="footer-link">Lista dei desideri</a></li>
+            </div>
           </div>
-        </row>
-        <h1 align="center">Concessionario Laghi</h1>
+          <div class="row normal-text">
+            <div class="col-12">
+              <h1 align="center">Concessionario Laghi</h1>
+            </div>
+          </div>
+        </div>
       </footer>
 
       <!-- Add .css style files -->
