@@ -13,3 +13,6 @@ DATE		HOUR	AUTHOR			DESCRIPTION
 28/04/2025	18:55	Daniele Chiarion	Added home sections and completed car brand card.
 29/04/2025	10:23	Daniele Chiarion	Start footer to be completed
 29/04/2025	11:19	Daniele Chiarion	Add new navbar for tablet to complete. Possible icons could be added later.
+29/04/2025	17:15	Daniele Chiarion	Completed footer.
+29/04/2025	18:23	Daniele Chiarion	Completed navbar for tablet devices.
+29/04/2025	20:54	Daniele Chiarion	Add last links to the other pages of the site. Completed home-page sections.
